104		Update logging to be more helpful
105		Verify all CK2 provinces are mapped
106		Add missing province mappings
107		Water provinces mapped
108		Tech group from history files
109		Better map spread
110		Map ROTW water provinces
111		A few more map fixes
112		Heirs for ROTW nations
113		Eliminate extra space in ROTW ruler names
114		Correct empty dynasty name
115		Use doParseFile()
116		Advisors for ROTW (except the parser chokes on the history files)
117		Updated parser files (and fixes to province mapping revealed by update)
118		Turkish/Open Succession fixed
119		Primogeniture succession no longer can lead to someone being their own heir
120		Log unmapped EU3 provinces instead of crashing
121		Regents
122		Added Ireland_endgame to sample saves
123		Updated readme.txt
124		Added dirty religion mappings
		Added converter mod directory: 0.1 now adds new religions
125		Merge
126		CK3 to EU3 converter mod religion and cultures
127		Updated country title mapping with almost all tags
128		Merge
129		Sync Changelog.txt with repository
130		Add Nyrael's Croatia 1453 game to sample saves
131		Get version number from save game
132		Add Hispania1399_10_17 save game
133		Read all files in traits and dynasties directories
134		Update readme file
135		Province mapping for 1.06, using version number in save to determine which set to use
136		Add some bits to province history
137		Clean up CK2 classes
138		Add missing bits to constructors
139		Initial culture conversion for provinces
140		Refactor EU3 classes
141		Update culture conversion to allow distinguishers
142		ROTW cultures
143		Province capital names from EU3 data. Also, much more province history is output.
144		Add a few new cultures to converter mod. Also update mod culture mappings
145		Updates to culture mappings and mod after some testing
146		Update converter mod to make easy for mod directory use
147		Initial religion conversion
148		Religions for ROTW provinces